--- a/WindowSelector/WindowSelector.vcxproj.filters
+++ b/WindowSelector/WindowSelector.vcxproj.filters
@@ -27,12 +27,30 @@
     <ClInclude Include="WindowSelector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Convertions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BrowserHandler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WindowUtil.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="WindowSelector.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BrowserHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Conversions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WindowUtil.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
