--- a/WindowSelector/WindowSelector.vcxproj
+++ b/WindowSelector/WindowSelector.vcxproj
@@ -151,6 +151,7 @@
   <ItemGroup>
     <ClInclude Include="BrowserHandler.h" />
     <ClInclude Include="Convertions.h" />
+    <ClInclude Include="Util.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -160,6 +161,7 @@
   <ItemGroup>
     <ClCompile Include="BrowserHandler.cpp" />
     <ClCompile Include="Conversions.cpp" />
+    <ClCompile Include="Util.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
